# PaziLab2

./: CMakeLists.txt  README.md  main.cpp  poly1305_changelog.md
examples/: test-poly1305.c
source/: ak_poly3015.c  libakrypt-base.h  libakrypt.h
